--- a/PresentationTier/MainWindow.xaml
+++ b/PresentationTier/MainWindow.xaml
@@ -5,8 +5,79 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PresentationTier"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow"
+        Height="400"
+        Width="800"
+        WindowStartupLocation="CenterScreen" 
+        Background="LightCyan">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
 
+        <Grid Grid.Row="0" Name="GridForTovar"
+              DataContext="{Binding ElementName=MainList, Path=SelectedItem}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Margin="5" Grid.Row="0" Text="Код:"/>
+            <TextBox Margin="5" Grid.Row="0" Grid.Column="1"
+                     Text="{Binding CodeProduct}"/>
+            <TextBlock Margin="5" Grid.Row="1" Text="Наименование:"/>
+            <TextBox Margin="5" Grid.Row="1" Grid.Column="1"
+                     Text="{Binding NameProduct}"/>
+            <TextBlock Margin="5" Grid.Row="2" Text="Цена:"/>
+            <TextBox Margin="5" Grid.Row="2" Grid.Column="1"
+                     Text="{Binding PriceProduct}"/>
+            <TextBlock Margin="5" Grid.Row="3" Text="Количество:"/>
+            <TextBox Margin="5" Grid.Row="3" Grid.Column="1"
+                     Text="{Binding CountProduct}"/>
+            <TextBlock Margin="5" Grid.Row="4" Text="Описание:"/>
+            <TextBox Margin="5" Grid.Row="5"
+                     Grid.Column="0" Grid.ColumnSpan="2"
+                     Text="{Binding DescriptionProduct}"/>
+            <TextBlock Margin="5" Grid.Row="6" Text="Всего по товару:"/>
+            <TextBox Margin="5" Grid.Row="6" Grid.Column="1"
+                     Text="{Binding SummPriceOfProductPosition, Mode=OneWay}"/>
+        </Grid>
+
+        <Grid Grid.Row="1" Name="GridForCollections">
+            <ListBox Name="MainList" 
+                     ItemsSource="{Binding ProductList, Mode=OneWay}"
+                     DisplayMemberPath="ProductPresentation" 
+                     Background="Azure"
+                     Margin="10"/>
+        </Grid>
+
+        <Grid Grid.Row="2" Name="GridForItog">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Margin="5" Text="Суммарная стоимость:" Grid.Column="0"
+                       HorizontalAlignment="Right"/>
+            <TextBox Margin="5" Grid.Column="1"
+                     Text="{Binding Path=SummPrice, Mode=OneWay}"/>
+            <TextBlock Margin="5" Text="Всего товаров:" Grid.Column="2"
+                       HorizontalAlignment="Right"/>
+            <TextBox Margin="5" Grid.Column="3"
+                     Text="{Binding Path=SummCount, Mode=OneWay}"/>
+        </Grid>
     </Grid>
 </Window>
